commit con el manifest correctamente configurado
añadido nombre correcto de la aplicacion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GymAppXML</string>
+    <string name="app_name">ErrekaFit</string>
     <string name="LoginToStart">Inicia sesion para continuar</string>
     <string name="editTextLogin">Login</string>
     <string name="errekafit">ERREKAFIT</string>
