remember me mejorado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,8 @@
        <item>Client</item>
        <item>Trainer</item>
     </string-array>
+    <string-array name="Language">
+        <item>Español</item>
+        <item>English</item>
+    </string-array>
 </resources>
