--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
     <string name="passLogin">Contraseña</string>
     <string name="enter_user">enter_user</string>
     <string name="loginTextView">Inicio de sesión</string>
-    <string name="txt_ok">OK!</string>
-    <string name="videoButtonTxt">Reproducir video</string>
+    <string name="txt_ok" translatable="false">OK!</string>
+    <string name="videoButtonTxt" translatable="false">Reproducir video</string>
     <string name="editTextname">Nombre</string>
     <string name="editTextDate">Fecha de Nacimiento</string>
     <string name="editTextTextEmailAddress">Correo</string>
@@ -47,8 +47,8 @@
        <item>Trainer</item>
     </string-array>
     <string-array name="Language">
-        <item>Español</item>
         <item>English</item>
+        <item>Español</item>
     </string-array>
     <string-array name="themeMode">
         <item>Dark</item>
